Added portability, sock_perf_pub

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,14 @@
 *.class
 *.o
 x.*
+xx.*
+xxx.*
 *.log
 um_perf_jitter
 usb_perf
 um_perf_pub
 um_perf_sub
+sock_perf_sub
 
 # UM-specific overhead files
 labbox.sh
