--- a/lbm.sh.example
+++ b/lbm.sh.example
@@ -1,15 +1,12 @@
 #!/bin/sh
 # lbm.sh.example. Copy to "lbm.sh" and replace license info with yours.
 
-LBM_LICENSE_INFO="Product=LBM,UME,UMQ,UMDRO:Organization=xxxx:Expiration-Date=never:License-Key=xxxx xxxx xxxx xxxx"
-export LBM_LICENSE_INFO
+export LBM_LICENSE_INFO="Product=LBM,UME,UMQ,UMDRO:Organization=xxxx:Expiration-Date=never:License-Key=xxxx xxxx xxxx xxxx"
 
 L=$HOME/UMP_6.14/
 LBM=$L/Linux-glibc-2.17-x86_64
 LBMJ=$L/java
 
-LD_LIBRARY_PATH=$LBM/lib
-export LD_LIBRARY_PATH
+export LD_LIBRARY_PATH=$LBM/lib
 
-PATH="$LBM/bin:$L/SRS/bin:$L/MCS/bin:$PATH"
-export PATH
+export PATH="$LBM/bin:$L/SRS/bin:$L/MCS/bin:$PATH"
